# mem

./: .gitignore  .rgignore  AGENTS.md  Cargo.toml  README.md  cast.json  flake.nix  ocx.json  opencode.json  tags
.github/workflows/: release.yml
command-ref/: spec.md
dev/: directory-structure.md  mem-api.md
docs/learning/: README.md
improved-list/: spec.md
optimize-list-i/: optimize-list-i-analysis.md  spec.md
src/: cli.rs  config.nu  config.rs  errors.nu  git.rs  main.nu  main.rs
src/commands/: add.nu  add.rs  config.nu  context.rs  diff.nu  init.nu  init.rs  list.nu  list.rs  log.nu  mod.rs  prune.nu  pull.nu  push.nu  ref.nu  status.nu
src/commands/context/: init.rs  mod.rs  profiles.rs  render.rs  show.rs  tests.rs
src/commands/log/: add.rs  list.rs  mod.rs
src/context/: mod.rs
src/lib/: git.nu  git_utils.nu
src/lib/config/: defaults.nu  display.nu  env.nu  loader.nu  mod.nu
tests/: add.rs  context_init.rs  context_path.rs  context_render.rs  context_render_base.rs  context_show.rs  gix_learning.rs  helpers.rs  init.rs  list.rs  log.rs
