[package]
authors = ["palekiwi"]
name = "mem"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
gix = { version = "0.81.0", features = ["blocking-network-client", "worktree-mutation"] }

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
pretty_assertions = "1.4.1"
tempfile = "3.27.0"
