[package]
name = "mem"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
figment = { version = "0.10.19", features = ["json", "env"] }

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
pretty_assertions = "1.4.1"
tempfile = "3.27.0"
